Added first image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 <body>
     <div>
     <h1>This is de web page sample</h1>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page.</p>
+    <p class="p1">This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page.</p>
+    <p class="p2">
+        Image Description:<br>
+        <img src=".\pinture.jpg" alt="Image description" width="550" height="250">
+    </p>
     </div>
 </body>
 <footer>
