--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     </div>
 </body>
 <footer>
-    Made by Felinc74
+    <p>Made by Felinc74</p>
+    <p>Company: Felinc74</p>
+    <p><a href="mailto:contact@felinc74.com">contact@felinc74.com</a></p>
 </footer>
 </html>
